--- a/src/assets/sass/_vars.scss
+++ b/src/assets/sass/_vars.scss
@@ -6,6 +6,7 @@ $color-light-gray: #d7d7d7;
 $color-lighter-gray: #c4c4c4;
 $color-dark-gray: #aaa;
 $color-gray: #909090;
+$color-medium-black: #333;
 $color-light-black: #1a1a1a;
 $color-gradient-main-end: #1a1515;
 $color-header-black: #0b0b0b;
