Fixed a bug where the 'Heading' component would be strangely centered after visiting another page

--- a/src/components/ui/text/heading/Heading.module.scss
+++ b/src/components/ui/text/heading/Heading.module.scss
@@ -13,8 +13,9 @@
 	text-transform: uppercase;
 	text-align: center;
 	color: $color-full-black;
-	display: grid;
-	place-content: center;
+	display: inline-flex;
+	justify-content: center;
+	align-items: center;
 }
 
 @media only screen and (px-to-rem(1600) > width) {
